k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 799675180298.dkr.ecr.us-east-1.amazonaws.com/satiety-ai-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
