k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: satiety-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: satiety-frontend

  template:
    metadata:
      labels:
        app: satiety-frontend

    spec:
      containers:
        - name: frontend

          image: triptipcode/satiety-frontend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 80
