k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satiety-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          # Backend API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: satiety-backend-service
                port:
                  number: 5000

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: satiety-frontend-service
                port:
                  number: 80
